@@ -1,0 +1,1 @@
+E: binaries-multiarch: triplet-dir-and-architecture-mismatch usr/lib/x86_64-linux-gnu/ is for amd64
